--- a/src/main/webapp/WEB-INF/reports/otherreports/rpt_ecapacitaciones.jrxml
+++ b/src/main/webapp/WEB-INF/reports/otherreports/rpt_ecapacitaciones.jrxml
@@ -18,7 +18,9 @@
 	<parameter name="USUARIO" class="java.lang.String"/>
 	<queryString>
 		<![CDATA[SELECT e.*, c.nombrecapacitacion,c.fechacapacitacion,ca.nombrecapacitador FROM `evaluacioncapacitacion` e, capacitacion c,capacitador ca  WHERE e.`codigocapacitacion`=c.`codigocapacitacion` and c.`codigocapacitador`=ca.`codigocapacitador` and  e.`codigocapacitacion`=$P{CODIGO}
-and c.fechacapacitaciondesde>=$P{FECHAINICIO}]]>
+and c.fechacapacitacion>= STR_TO_DATE($P{FECHAINICIO}, '%d/%m/%Y')
+and c.fechacapacitacion<= STR_TO_DATE($P{FECHAFIN}, '%d/%m/%Y')
+]]>
 	</queryString>
 	<field name="codigoevaluacioncapacitacion" class="java.lang.Integer">
 		<fieldDescription><![CDATA[]]></fieldDescription>
